--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ thiserror = "1.0.44"
 anyhow = "1.0.72"
 base64 = "0.21.2"
 argon2 = { version = "0.5.1", features = ["std"] }
+urlencoding = "2.1.3"
 
 [dependencies.sqlx]
 version = "0.7.1"
